# BebopS

./: CMakeLists.txt  package.xml
config/: mrta_problem_default.yaml
launch/: agri_1g2a.launch  agri_3g2a.launch  bebop_without_controller.launch  deploy_collector_field.launch  mrta_sim.launch  mrta_sim_big.launch  mrta_sim_simple.launch  mrta_sim_sky.launch  normal_1g2a.launch  normal_3g2a.launch  normal_3g2a_copy.launch  normal_3g2a_turtlebot.launch  problem_generator.launch  publish_ugv.launch  spawn_bebop_mrta.launch  spawn_jackal_mrta.launch  start.launch  task1_world_update.launch  task2_world_with_bebop.launch  test_uav_ugv.launch  turtlebots.launch  uav_ugv.launch  wise_mission.launch  wise_stand_by.launch  wise_test.launch
launch/archive_old_launch/: deploy_mission.launch  mrta_sim.launch  mrta_test_scenario.launch  normal_1g2a.launch  normal_2g2a.launch  normal_3g2a.launch  wise_mission_2.launch
launch/archive_original_launch/: multiple_task2_world.launch  task1_world.launch  task2_world.launch
models/cyberzoo_2/: cyberzoo_2.sdf  cyberzoo_floor.dae  model.config
models/home_mat/: model.config  model.sdf
models/land_wall/: model.config  model.sdf
models/landing_mat/: landing_mat.dae  landing_mat.sdf  model.config
models/sky_room/: model.config  model.sdf
msg/: MRTAProblem.msg
resource/: waypoints.txt  waypoints0.txt  waypoints1.txt  waypoints2.txt  waypoints3.txt
src/linprog/: linprog.py
src/nodes/: battery_dynamics.py  genetic_allocator.py  hovering_example.cpp  mission_data_center.py  mission_manager.py  mrta_problem_generator.py  mrta_uav_waypoint.cpp  mrta_uav_waypoint.h  mrta_uav_waypoint_old.cpp  mrta_ugv_waypoint.py  mrta_ugv_waypoint_test.py  mrta_virtual_energy.py  pmrta_allocator.py  task_dynamics.py  uav_waypoint.cpp  ugv_waypoint.cpp  ugv_waypoint_1.py  ugv_waypoint_2.py  ugv_waypoint_3.py  ugv_waypoint_only.py
src/nodes/archive_old_code/: Linprog MRTA.ipynb  ga_main_V2.py  ugv_waypoint.py  ugv_waypoint_1.py  ugv_waypoint_2.py  ugv_waypoint_3.py
worlds/: basic.world  general.world  general_2.world  general_obs.world  la-africana-big.world  la-africana-miniature.world  la-africana-plain.world  la-africana-task.world  la_africana.world  sky.world
